# sfconversions

./: Cargo.toml  README.md
src/: constructors.rs  fromsf.rs  geom.rs  lib.rs  rstar.rs  sfg.rs  tosf.rs  vctrs.rs
