[package]
name = "sfconversions"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Support conversion from R's sf package types to geo_types geometry primitives using extendr"
repository = "https://github.com/josiahparry/sfconversions"
keywords = ["geospatial", "rstats"]
categories = ["science::geo"]
authors = ["Josiah Parry"]


[dependencies]
extendr-api = '*'
geo = ">=0.26.0"
geo-types = {version = ">=0.6.0", features = ["use-rstar_0_11"] }
rstar = {version = ">=0.11.0" }

[lib]
crate-type = ["staticlib", "lib"]
doctest = false

[features]
# rstar = ["dep:rstar"]

[patch.crates-io]
geo = { git = "https://github.com/georust/geo" }
extendr-api = { git = "https://github.com/extendr/extendr", branch = "extendr_is_singlethreaded" }
