[package]
name = "sfconversions"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Support conversion from R's sf package types to geo_types geometry primitives using extendr"
repository = "https://github.com/josiahparry/sfconversions"
keywords = ["geospatial", "rstats"]
categories = ["science::geo"]
authors = ["Josiah Parry"]


[dependencies]
extendr-api = '>=0.7.0'
geo = ">=0.26.0"
geo-types = { version = ">=0.6.0", features = ["use-rstar_0_11"] }
rstar = { version = ">=0.11.0" }
serde_esri = { git = "https://github.com/JosiahParry/serde_esri" }

[lib]
crate-type = ["staticlib", "lib"]
doctest = false

[features]
# rstar = ["dep:rstar"]

[patch.crates-io]
geo = { git = "https://github.com/georust/geo" }
